fixed the annoying erros

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-		<h1>Sample App</h1>
-		<p>
-		Contact page for the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>	
-		</p>
+<h1>Contact</h1>
+	<p>
+	Contact page for the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>	
+	</p>
