added layout links with routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
   <body>
     <div class="container">
       <%= render 'layouts/header' %>
-      <div id="content" class="round">
+      <section class="round">
         <%= yield %>
-      </div>
+      </section>
       <%= render 'layouts/footer' %>
     </div>
   </body>
